--- a/src/minic2eeyore/Makefile
+++ b/src/minic2eeyore/Makefile
@@ -1,9 +1,9 @@
 all:	minic2eeyore
 
-minic2eeyore:	lexer.l parser.y syntax_tree.c name_hash.c gen_eey.c
+minic2eeyore:	lexer.l parser.y syntax_tree.c name_hash.c gen_eey.c utils.c
 	flex lexer.l
 	bison -d -y parser.y --debug --verbose
-	gcc -g -o minic2eeyore y.tab.c lex.yy.c gen_eey.c syntax_tree.c name_hash.c -ly -ll
+	gcc -g -std=c11 -o minic2eeyore y.tab.c lex.yy.c gen_eey.c syntax_tree.c name_hash.c utils.c -ly -ll
 
 clean:
-	rm -rf minic2eeyore *.o lex.yy.* *.tab.*
+	rm -rf minic2eeyore *.o lex.yy.* *.tab.h *.output
